--- a/detail.html
+++ b/detail.html
@@ -46,12 +46,12 @@
     <div class="container">
         <div class="left">
             <div class="top">
-                <div class="item">왼쪽 위 왼쪽</div>
-                <div class="item">왼쪽 위 오른쪽</div>
+                <div class="item">이미지</div>
+                <div class="item">PROFILE</div>
             </div>
-            <div class="bottom">왼쪽 아래 영역</div>
+            <div class="bottom">ABOUTME/TOGETHER</div>
         </div>
-        <div class="right">오른쪽 영역</div>
+        <div class="right">방명록</div>
     </div>
 </body>
 
