feat:첫번째 메인페이지 추가 및 헤더 퍼블리싱

--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 
       .wrap .page {
         color: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         font-size: 40px;
 
         width: 100%;
@@ -27,20 +24,41 @@
       .header {
         width: 100%;
         position: fixed;
-        color: green;
-        height: 70px;
-        background: white;
+        height: 200px;
+        background-color: #fff;
+        background-color: #E1AF02;  
+        text-align: center;
+        font-size: 200px;
       }
     </style>
   </head>
   <body>
-    <header class="header">Header</header>
+    <header class="header">JALHALSUITZO</header>
     <div class="wrap">
-      <div class="page" style="background: black">01</div>
-      <div class="page" style="background: blueviolet">02</div>
-      <div class="page" style="background: brown">03</div>
-      <div class="page" style="background: darkgreen">04</div>
-      <div class="page" style="background: darkblue">05</div>
+      <div class="page">
+        <div class="main_img">
+          <img src="./image/main.png" alt="">
+        </div>
+        <div class="introduce">
+          <div class="introduce_text">
+            <p>ABOUT TEAM</p>
+            <p>유일하게 모두 I</p>
+          </div>
+          <div class="introduce_text">
+            <p>OUR GOAL</p>
+            <p>같이 일하고 싶은 개발자 되기</p>
+          </div>
+          <div class="introduce_text">
+            <p>GOUND RULES</p>
+            <div>
+              <p>상호 존중하기</p>
+              <p>진행사항 공유하기</p>
+              <p>웃으면서 대화하기</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="page"></div>
     </div>
   </body>
 </html>
