버튼 프로토타입 추가

--- a/detail.html
+++ b/detail.html
@@ -9,48 +9,56 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="left">
-            <div class="top">
-                <div class="item-image">
+    <div class="wrap">
+        <button class="prev"><</button>
+        <div class="container">
+            <div class="left">
+                <div class="top">
+                    <div class="item-image">
+                    </div>
+                    <div class="item-profile">
+                        <h1>PROFILE</h1>
+                        <div class="tag">
+                            <h3>NAME</h3>
+                            <p>이름</p>
+                        </div>
+                        <div class="tag">
+                            <h3>E-MAIL</h3>
+                            <p>이메일 주소</p>
+                        </div>
+                        <div class="tag">
+                            <h3>BLOG</h3>
+                            <p>블로그 주소</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="item-profile">
-                    <h1>PROFILE</h1>
-                    <div class="tag">
-                        <h3>NAME</h3>
-                        <p>이름</p>
+                <div class="bottom">
+                    <div class="item-about">
+                        <h1>ABOUT ME</h1>
+                        <div class="box">
+                            <p>MBTI</p>
+                            <p>취미</p>
+                            <p>특징</p>
+                            <p>관심사</p>
+                        </div>
                     </div>
-                    <div class="tag">
-                        <h3>E-MAIL</h3>
-                        <p>이메일 주소</p>
-                    </div>
-                    <div class="tag">
-                        <h3>BLOG</h3>
-                        <p>블로그 주소</p>
+                    <div class="item-together">
+                        <h1>LET'S WORK TOGETHER</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore consequuntur iste eligendi
+                            quo
+                            ducimus? Ipsam voluptate id mollitia est, commodi repudiandae, voluptates odio at quibusdam
+                            ea,
+                            assumenda unde neque veniam?</p>
                     </div>
                 </div>
             </div>
-            <div class="bottom">
-                <div class="item-about">
-                    <h1>ABOUT ME</h1>
-                    <div class="box">
-                        <p>MBTI</p>
-                        <p>취미</p>
-                        <p>특징</p>
-                        <p>관심사</p>
-                    </div>
-
-                </div>
-                <div class="item-together">
-                    <h1>LET'S WORK TOGETHER</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore consequuntur iste eligendi quo
-                        ducimus? Ipsam voluptate id mollitia est, commodi repudiandae, voluptates odio at quibusdam ea,
-                        assumenda unde neque veniam?</p>
-                </div>
+            <div class="right">
+                방명록
             </div>
         </div>
-        <div class="right">방명록</div>
+        <button class="next">></button>
     </div>
+
 </body>
 
 </html>
