--- a/detail.html
+++ b/detail.html
@@ -9,56 +9,276 @@
 </head>
 
 <body>
-    <div class="wrap">
-        <button class="prev"><</button>
-        <div class="container">
-            <div class="left">
-                <div class="top">
-                    <div class="item-image">
+    <div style="overflow: hidden; max-height: 1000px;">
+        <div class="btnbox">
+            <button class="prev"><</button>
+            <button class="next">></button>
+        </div>
+        <div class="background">
+            <div class="wrap">
+                <div class="container">
+                    <div class="left">
+                        <div class="top">
+                            <div class="item-image">
+                            </div>
+                            <div class="item-profile">
+                                <h1>PROFILE</h1>
+                                <div class="tag">
+                                    <h3>NAME</h3>
+                                    <p>채종민</p>
+                                </div>
+                                <div class="tag">
+                                    <h3>E-MAIL</h3>
+                                    <p>okck12382@gmail.com</p>
+                                </div>
+                                <div class="tag">
+                                    <h3>BLOG</h3>
+                                    <p>https://velog.io/@okck123/posts</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bottom">
+                            <div class="item-about">
+                                <h1>ABOUT ME</h1>
+                                <div class="box">
+                                    <p>INFJ</p>
+                                    <p>산책과 등산을 좋아합니다.</p>
+                                    <p>고민상담 전문가</p>
+                                    <p>경제와 창업에 관심이 있습니다.</p>
+                                </div>
+                            </div>
+                            <div class="item-together">
+                                <h1>LET'S WORK TOGETHER</h1>
+                                <p>한가지 일을 다 끝내고 다음일을 시작하는 편 입니다.<br> 시간이 오래 걸릴 수 있으나 설정한 목표를 꼭 달성시키려 행동
+                                    합니다.<br>같이 일하고
+                                    같이 쉬고 같이 즐기며 일하는 것을 추구 합니다.</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="item-profile">
-                        <h1>PROFILE</h1>
-                        <div class="tag">
-                            <h3>NAME</h3>
-                            <p>이름</p>
-                        </div>
-                        <div class="tag">
-                            <h3>E-MAIL</h3>
-                            <p>이메일 주소</p>
-                        </div>
-                        <div class="tag">
-                            <h3>BLOG</h3>
-                            <p>블로그 주소</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="bottom">
-                    <div class="item-about">
-                        <h1>ABOUT ME</h1>
-                        <div class="box">
-                            <p>MBTI</p>
-                            <p>취미</p>
-                            <p>특징</p>
-                            <p>관심사</p>
-                        </div>
-                    </div>
-                    <div class="item-together">
-                        <h1>LET'S WORK TOGETHER</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore consequuntur iste eligendi
-                            quo
-                            ducimus? Ipsam voluptate id mollitia est, commodi repudiandae, voluptates odio at quibusdam
-                            ea,
-                            assumenda unde neque veniam?</p>
+                    <div class="right">
+                        방명록
                     </div>
                 </div>
             </div>
-            <div class="right">
-                방명록
+            <div class="wrap">
+                <div class="container">
+                    <div class="left">
+                        <div class="top">
+                            <div class="item-image">
+                            </div>
+                            <div class="item-profile">
+                                <h1>PROFILE</h1>
+                                <div class="tag">
+                                    <h3>NAME</h3>
+                                    <p>1</p>
+                                </div>
+                                <div class="tag">
+                                    <h3>E-MAIL</h3>
+                                    <p>1</p>
+                                </div>
+                                <div class="tag">
+                                    <h3>BLOG</h3>
+                                    <p>1</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bottom">
+                            <div class="item-about">
+                                <h1>ABOUT ME</h1>
+                                <div class="box">
+                                    <p>1</p>
+                                    <p>1</p>
+                                    <p>1</p>
+                                    <p>1</p>
+                                </div>
+                            </div>
+                            <div class="item-together">
+                                <h1>LET'S WORK TOGETHER</h1>
+                                <p>1</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        방명록
+                    </div>
+                </div>
+            </div>
+            <div class="wrap">
+                <div class="container">
+                    <div class="left">
+                        <div class="top">
+                            <div class="item-image">
+                            </div>
+                            <div class="item-profile">
+                                <h1>PROFILE</h1>
+                                <div class="tag">
+                                    <h3>NAME</h3>
+                                    <p>2</p>
+                                </div>
+                                <div class="tag">
+                                    <h3>E-MAIL</h3>
+                                    <p>2</p>
+                                </div>
+                                <div class="tag">
+                                    <h3>BLOG</h3>
+                                    <p>2</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bottom">
+                            <div class="item-about">
+                                <h1>ABOUT ME</h1>
+                                <div class="box">
+                                    <p>2</p>
+                                    <p>2</p>
+                                    <p>2</p>
+                                    <p>2</p>
+                                </div>
+                            </div>
+                            <div class="item-together">
+                                <h1>LET'S WORK TOGETHER</h1>
+                                <p>2</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        방명록
+                    </div>
+                </div>
+            </div>
+            <div class="wrap">
+                <div class="container">
+                    <div class="left">
+                        <div class="top">
+                            <div class="item-image">
+                            </div>
+                            <div class="item-profile">
+                                <h1>PROFILE</h1>
+                                <div class="tag">
+                                    <h3>NAME</h3>
+                                    <p>3</p>
+                                </div>
+                                <div class="tag">
+                                    <h3>E-MAIL</h3>
+                                    <p>3</p>
+                                </div>
+                                <div class="tag">
+                                    <h3>BLOG</h3>
+                                    <p>3</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bottom">
+                            <div class="item-about">
+                                <h1>ABOUT ME</h1>
+                                <div class="box">
+                                    <p>3</p>
+                                    <p>3</p>
+                                    <p>3</p>
+                                    <p>3</p>
+                                </div>
+                            </div>
+                            <div class="item-together">
+                                <h1>LET'S WORK TOGETHER</h1>
+                                <p>3</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        방명록
+                    </div>
+                </div>
+            </div>
+            <div class="wrap">
+                <div class="container">
+                    <div class="left">
+                        <div class="top">
+                            <div class="item-image">
+                            </div>
+                            <div class="item-profile">
+                                <h1>PROFILE</h1>
+                                <div class="tag">
+                                    <h3>NAME</h3>
+                                    <p>4</p>
+                                </div>
+                                <div class="tag">
+                                    <h3>E-MAIL</h3>
+                                    <p>4</p>
+                                </div>
+                                <div class="tag">
+                                    <h3>BLOG</h3>
+                                    <p>4</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bottom">
+                            <div class="item-about">
+                                <h1>ABOUT ME</h1>
+                                <div class="box">
+                                    <p>4</p>
+                                    <p>4</p>
+                                    <p>4</p>
+                                    <p>4</p>
+                                </div>
+                            </div>
+                            <div class="item-together">
+                                <h1>LET'S WORK TOGETHER</h1>
+                                <p>4</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        방명록
+                    </div>
+                </div>
+            </div>
+            <div class="wrap">
+                <div class="container">
+                    <div class="left">
+                        <div class="top">
+                            <div class="item-image">
+                            </div>
+                            <div class="item-profile">
+                                <h1>PROFILE</h1>
+                                <div class="tag">
+                                    <h3>NAME</h3>
+                                    <p>5</p>
+                                </div>
+                                <div class="tag">
+                                    <h3>E-MAIL</h3>
+                                    <p>5</p>
+                                </div>
+                                <div class="tag">
+                                    <h3>BLOG</h3>
+                                    <p>5</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bottom">
+                            <div class="item-about">
+                                <h1>ABOUT ME</h1>
+                                <div class="box">
+                                    <p>5</p>
+                                    <p>5</p>
+                                    <p>5</p>
+                                    <p>5</p>
+                                </div>
+                            </div>
+                            <div class="item-together">
+                                <h1>LET'S WORK TOGETHER</h1>
+                                <p>5</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        방명록
+                    </div>
+                </div>
             </div>
         </div>
-        <button class="next">></button>
     </div>
 
+<script src="index.js"></script>
 </body>
 
 </html>
