헤더 이름 추가

--- a/detail.html
+++ b/detail.html
@@ -12,6 +12,12 @@
     <div style="overflow: hidden; max-height: 1000px;">
         <div class="btnbox">
             <button class="prev"><</button>
+            <button>채종민</button>
+            <button>이준혁</button>
+            <button>홍유나</button>
+            <button>박초롱</button>
+            <button>복예린</button>
+            <button>김승회</button>
             <button class="next">></button>
         </div>
         <div class="background">
