--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         background-color: #E1AF02;  
         text-align: center;
         font-size: 200px;
+        z-index: 1;
       }
     </style>
   </head>
@@ -58,7 +59,42 @@
           </div>
         </div>
       </div>
-      <div class="page"></div>
+      <!-- 유나 수정 -->
+      <div class="page ver2">
+        <ul class="profile_wrap">
+          <li class="team_profile">
+            <div class="circle">
+              <img src="./image/profile_img.png" alt="profile_img">
+            </div>
+          </li>
+          <li class="team_profile">
+            <div class="circle">
+              <img src="./image/profile_img.png" alt="profile_img">
+            </div>
+          </li>
+          <li class="team_profile">
+            <div class="circle">
+              <img src="./image/profile_img.png" alt="profile_img">
+            </div>
+          </li>
+          <li class="team_profile">
+            <div class="circle">
+              <img src="./image/profile_img.png" alt="profile_img">
+            </div>
+          </li>
+          <li class="team_profile">
+            <div class="circle">
+              <img src="./image/profile_img.png" alt="profile_img">
+            </div>
+          </li>
+          <li class="team_profile">
+            <div class="circle">
+              <img src="./image/profile_img.png" alt="profile_img">
+            </div>
+          </li>
+        </ul>
+
+      </div>
     </div>
   </body>
 </html>
