파일 위치변경

--- a/detail_1.html
+++ b/detail_1.html
@@ -29,10 +29,6 @@
                         <span class="item__value">https://velog.io/@liin/posts</span>
                     </div>
                 </div>
-<<<<<<< HEAD
-=======
-                
->>>>>>> 06972d1c6de9b6586b175653e3c5c70405c678fb
             </div>
             <div class="left-bottom">
                 <div class="aboutMe">
@@ -54,6 +50,26 @@
                 </div>
             </div>
             <div class="right">
+                <div class="icons">
+                    <div class="icon">
+                        <img src="img/chorongpark.png">
+                    </div>
+                    <div class="icon">
+                        <img src="img/yunahong.png">
+                    </div>
+                    <div class="icon">
+                        <img src="img/junheoklee.png">
+                    </div>
+                    <div class="icon">
+                        <img src="img/yelinbok_1.png">
+                    </div>
+                    <div class="icon">
+                        <img src="img/seunghoekim.png">
+                    </div>
+                    <div class="icon">
+                        <img src="img/jongminchae.png">
+                    </div>
+                </div>
                 <div class="guest__log-title">
                     <span>Say "Hello"<br>to our teammate</span>
                 </div>
