--- a/detail_1.html
+++ b/detail_1.html
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="guest__log-title">
-                    <span>Say "Hello"<br>to our teammate</span>
+                    <span>Say "Hello"<br>to our teammates</span>
                 </div>
                 <div class="guest__log">
                     <div class="comment__box">
