--- a/detail.html
+++ b/detail.html
@@ -108,14 +108,14 @@
 
 
         // Firebase 구성 정보 설정
-        const firebaseConfig = {
-            apiKey: ,
-            authDomain: "teamintro-ba1f9.firebaseapp.com",
-            projectId: "teamintro-ba1f9",
-            storageBucket: "teamintro-ba1f9.appspot.com",
-            messagingSenderId: "440810346553",
-            appId: 
-        };
+        // const firebaseConfig = {
+        //     apiKey: ,
+        //     authDomain: "teamintro-ba1f9.firebaseapp.com",
+        //     projectId: "teamintro-ba1f9",
+        //     storageBucket: "teamintro-ba1f9.appspot.com",
+        //     messagingSenderId: "440810346553",
+        //     appId: 
+        // };
 
 
         // Firebase 인스턴스 초기화
