상세페이지 코드 일부 수정

--- a/detail.html
+++ b/detail.html
@@ -10,8 +10,9 @@
 
 <body>
     <div class="wrapper">
-        <button class="prev" type="button" onclick="location.href = 'detail.html'"><i class=" fa-solid fa-caret-left
-            fa-2x"></i></button>
+        <button class="prev" type="button" onclick="location.href = 'detail.html'">
+            <i class=" fa-solid fa-caret-left fa-2x"></i>
+        </button>
         <div class="container">
             <div class="left-left">
                 <img src="img/yelinbok.png">
@@ -55,7 +56,7 @@
             </div>
             <div class="right">
                 <div class="icons">
-                    <div class="icon">
+                    <div onclick="location.href = 'index.html'" class="icon">
                         <img src="img/chorongpark.png">
                     </div>
                     <div class="icon">
@@ -96,8 +97,9 @@
                 </div>
             </div>
         </div>
-        <button class="next" type="button" onclick="location.href = 'detail.html'"><i class=" fa-solid fa-caret-right
-            fa-2x"></i></button>
+        <button class="next" type="button" onclick="location.href = 'detail.html'">
+            <i class=" fa-solid fa-caret-right fa-2x"></i>
+        </button>
     </div>
     <script type="module">
         // Firebase SDK 라이브러리 가져오기
@@ -149,5 +151,4 @@
     </script>
     <script src="https://kit.fontawesome.com/748fe0d700.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
