--- a/detail.html
+++ b/detail.html
@@ -35,24 +35,27 @@
                 </div>
             </div>
             <div class="left-bottom">
-                <div class="aboutMe">
-                    <div>About me</div>
-                    <div class="aboutMe__tags">
-                        <div class="aboutMe__tag">
-                            <div class="tag">INTP</div>
-                            <div class="tag">특징</div>
-                        </div>
-                        <div class="aboutMe__tag">
-                            <div class="tag">취미</div>
-                            <div class="tag">관심사</div>
+                <div class="left-bottom-wrap">
+                    <div class="aboutMe">
+                        <div>About me</div>
+                        <div class="aboutMe__tags">
+                            <div class="aboutMe__tag">
+                                <div class="tag">INTP</div>
+                                <div class="tag">특징</div>
+                            </div>
+                            <div class="aboutMe__tag">
+                                <div class="tag">취미</div>
+                                <div class="tag">관심사</div>
+                            </div>
                         </div>
                     </div>
-                </div>
                 <div class="workTogether">
                     <span>Let's work together</span>
                     <p>진짜 음식물이 그에서 반장은 오늘날이며, 당합니다. 피식 물품을 같이 칼날이 가라. 없은 내지 수를, 하게 정도가 삶에 체외가 된 강하던 있어 기쁘어요. 그 대통령은 훌륭하다
                         늘린다면 생각을 선진이 채우다. 판 부정을 딴 음대가 사노 한편은 건치도 있은데. 인한 생산하면서 마음으로 접던 현실에, 우리에서 요즈음에 너에 사찰을, 시작하다.</p>
                 </div>
+            </div>
+
             </div>
             <div class="right">
                 <div class="icons">
