stlye: comment 스타일 변경 및 스크롤 생성

--- a/detail.html
+++ b/detail.html
@@ -82,8 +82,87 @@
                     <span>Say "Hello"<br>to our teammate</span>
                 </div>
                 <div class="guest__log">
-                    
-                    <div class="comment__box">
+                    <div class="comment__boxs">
+                        <div class="comment__box">
+                            <div class="profile__img">
+                                <img
+                                    src="https://images.velog.io/images/chang626/post/c9533c4f-adbb-4411-bce4-b09293d64fbf/A03EACB4-4DFA-439A-A3FE-084635A89FE6.png">
+                            </div>
+                            <div class="user">
+                                <div class="comment">
+                                    <span>내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</span>
+                                </div>
+                                <div class="commnet-icons">
+                                    <button><img src="./img/update.png" alt=""></button>
+                                    <button><img src="./img/delete.png" alt=""></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="comment__box">
+                            <div class="profile__img">
+                                <img
+                                    src="https://images.velog.io/images/chang626/post/c9533c4f-adbb-4411-bce4-b09293d64fbf/A03EACB4-4DFA-439A-A3FE-084635A89FE6.png">
+                            </div>
+                            <div class="user">
+                                <div class="comment">
+                                    <span>내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</span>
+                                </div>
+                                <div class="commnet-icons">
+                                    <button><img src="./img/update.png" alt=""></button>
+                                    <button><img src="./img/delete.png" alt=""></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="comment__box">
+                            <div class="profile__img">
+                                <img
+                                    src="https://images.velog.io/images/chang626/post/c9533c4f-adbb-4411-bce4-b09293d64fbf/A03EACB4-4DFA-439A-A3FE-084635A89FE6.png">
+                            </div>
+                            <div class="user">
+                                <div class="comment">
+                                    <span>내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</span>
+                                </div>
+                                <div class="commnet-icons">
+                                    <button><img src="./img/update.png" alt=""></button>
+                                    <button><img src="./img/delete.png" alt=""></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="comment__box">
+                            <div class="profile__img">
+                                <img
+                                    src="https://images.velog.io/images/chang626/post/c9533c4f-adbb-4411-bce4-b09293d64fbf/A03EACB4-4DFA-439A-A3FE-084635A89FE6.png">
+                            </div>
+                            <div class="user">
+                                <div class="comment">
+                                    <span>내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</span>
+                                </div>
+                                <div class="commnet-icons">
+                                    <button><img src="./img/update.png" alt=""></button>
+                                    <button><img src="./img/delete.png" alt=""></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="comment__box">
+                            <div class="profile__img">
+                                <img
+                                    src="https://images.velog.io/images/chang626/post/c9533c4f-adbb-4411-bce4-b09293d64fbf/A03EACB4-4DFA-439A-A3FE-084635A89FE6.png">
+                            </div>
+                            <div class="user">
+                                <div class="comment">
+                                    <span>내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</span>
+                                </div>
+                                <div class="commnet-icons">
+                                    <button><img src="./img/update.png" alt=""></button>
+                                    <button><img src="./img/delete.png" alt=""></button>
+                                </div>
+                            </div>
+                        </div>
+
+                       
+                    </div>
+
+                    <div class="gest__log-input">
                         <div class="profile__img">
                             <img
                                 src="https://images.velog.io/images/chang626/post/c9533c4f-adbb-4411-bce4-b09293d64fbf/A03EACB4-4DFA-439A-A3FE-084635A89FE6.png">
@@ -96,8 +175,8 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
+                .
             </div>
         </div>
         <button class="next" type="button" onclick="location.href = 'detail.html'">
