--- a/index.html
+++ b/index.html
@@ -36,57 +36,64 @@
       <div class="page">
         <ul class="profile_wrap">
           <li class="team_profile">
-            <a href="#"></a>
-            <p class="team_name">
-              CHRONG PARK
-            </p>
-            <div class="circle">
-              <img class="team_photo" src="./img/chorongpark.png" alt="profile_img">
-            </div>
+            <a class="ex" href="#">
+              <p class="team_name">
+                CHRONG PARK
+              </p>
+              <div class="circle">
+                <img class="team_photo" src="./img/chorongpark.png" alt="profile_img">
+              </div>
+            </a>
           </li>
           <li class="team_profile">
-            <a href="#"></a>
-            <p class="team_name">
-              YUNA HONG
-            </p>
-            <div class="circle">
-              <img class="team_photo" src="./img/yunahong.png" alt="profile_img">
-            </div>  
+            <a class="ex" href="#">
+              <p class="team_name">
+                YUNA HONG
+              </p>
+              <div class="circle">
+                <img class="team_photo" src="./img/yunahong.png" alt="profile_img">
+              </div>
+            </a>    
           </li>
           <li class="team_profile">
-            <a href="#"></a>
-            <p class="team_name">
-              JUNHEOK LEE
-            </p>
-            <div class="circle">
-              <img class="team_photo" src="./img/junheoklee.png" alt="profile_img">
+            <a class="ex" href="#">
+              <p class="team_name">
+                JUNHEOK LEE
+              </p>
+              <div class="circle">
+                <img class="team_photo" src="./img/junheoklee.png" alt="profile_img">
+              </div>
+            </a>
           </li>
           <li class="team_profile">
-            <a href="#"></a>
-            <p class="team_name">
-              YERIN BOK
-            </p>
-            <div class="circle">
-              <img class="team_photo" src="./img/yelinbok_1.png" alt="profile_img">
-            </div>
+            <a class="ex" href="#">
+              <p class="team_name">
+                YERIN BOK
+              </p>
+              <div class="circle">
+                <img class="team_photo" src="./img/yelinbok_1.png" alt="profile_img">
+              </div>
+            </a>
           </li>
           <li class="team_profile">
-            <a href="#"></a>
-            <p class="team_name">
-              SEUNGHOE KIM
-            </p>
-            <div class="circle">
-              <img class="team_photo" src="./img/seunghoekim.png" alt="profile_img">
-            </div>
+            <a class="ex" href="#">
+              <p class="team_name">
+                SEUNGHOE KIM
+              </p>
+              <div class="circle">
+                <img class="team_photo" src="./img/seunghoekim.png" alt="profile_img">
+              </div>
+            </a>
           </li>
           <li class="team_profile">
-            <a href="#"></a>
-            <p class="team_name">
-              JONGMIN CHAE
-            </p>
-            <div class="circle">
-              <img class="team_photo" src="./img/jongminchae.png" alt="profile_img">
-            </div>
+            <a class="ex" href="#">
+              <p class="team_name">
+                JONGMIN CHAE
+              </p>
+              <div class="circle">
+                <img class="team_photo" src="./img/jongminchae.png" alt="profile_img">
+              </div>
+            </a>
           </li>
         </ul>
       </div>
