--- a/index.html
+++ b/index.html
@@ -7,27 +7,44 @@
     <title>Title</title>
   </head>
   <body>
-    <header class="header">JALHALSUITZO</header>
+    <header class="header">
+      <div class="header_wrap inner_wrap">
+        <p>J</p>
+        <p>A</p>
+        <p>L</p>
+        <p>H</p>
+        <p>A</p>
+        <p>L</p>
+        <p>S</p>
+        <p>U</p>
+        <p>I</p>
+        <p>T</p>
+        <p>Z</p>
+        <p>O</p>
+      </div>
+    </header>
     <div class="wrap">
       <div class="page">
-        <div class="main_img">
-          <img src="./img/main.png" alt="" />
-        </div>
-        <div class="introduce">
-          <div class="introduce_text">
-            <p>ABOUT TEAM</p>
-            <p>유일하게 모두 I</p>
+        <div class="inner_wrap">
+          <div class="main_img">
+            <img src="./img/main.png" alt="" />
           </div>
-          <div class="introduce_text">
-            <p>OUR GOAL</p>
-            <p>같이 일하고 싶은 개발자 되기</p>
-          </div>
-          <div class="introduce_text">
-            <p>GOUND RULES</p>
-            <div>
-              <p>상호 존중하기</p>
-              <p>진행사항 공유하기</p>
-              <p>웃으면서 대화하기</p>
+          <div class="introduce">
+            <div class="introduce_text">
+              <p>ABOUT TEAM</p>
+              <p>유일하게 모두 I지만 그 누구보다 열심히!</p>
+            </div>
+            <div class="introduce_text">
+              <p>OUR GOAL</p>
+              <p>같이 밥먹고, 일하고 싶은 개발자 되기</p>
+            </div>
+            <div class="introduce_text">
+              <p>GOUND RULES</p>
+              <div>
+                <p>대화 할때는 웃는 얼굴로</p>
+                <p>항상 존중하고 서로 의견 물어보기</p>
+                <p>진행사항 자세히 공유해주기</p>
+              </div>
             </div>
           </div>
         </div>
