상세페이지 프로필  내용 수정

--- a/detail.html
+++ b/detail.html
@@ -225,13 +225,11 @@
                   </div>
                   <div class="profile__content">
                     <span class="item">E-mail 📧</span>
-                    <span class="item__value">yelini9060@naver.com</span>
+                    <span class="item__value">ghddbsk12@naver.com</span>
                   </div>
                   <div class="profile__content">
                     <span class="item">Blog 🏷</span>
-                    <span class="item__value"
-                      >https://velog.io/@liin/posts</span
-                    >
+                    <span class="item__value">https://github.com/yuna-hh</span>
                   </div>
                 </div>
               </div>
@@ -407,13 +405,11 @@
                   </div>
                   <div class="profile__content">
                     <span class="item">E-mail 📧</span>
-                    <span class="item__value">yelini9060@naver.com</span>
+                    <span class="item__value">a01082440733@gmail.com</span>
                   </div>
                   <div class="profile__content">
                     <span class="item">Blog 🏷</span>
-                    <span class="item__value"
-                      >https://velog.io/@liin/posts</span
-                    >
+                    <span class="item__value">https://velog.io/@ly0609/posts</span>
                   </div>
                 </div>
               </div>
