--- a/detail.html
+++ b/detail.html
@@ -205,7 +205,6 @@
                     </div>
                   </div>
                 </div>
-                .
               </div>
             </div>
           </div>
@@ -409,7 +408,9 @@
                   </div>
                   <div class="profile__content">
                     <span class="item">Blog 🏷</span>
-                    <span class="item__value">https://velog.io/@ly0609/posts</span>
+                    <span class="item__value"
+                      >https://velog.io/@ly0609/posts</span
+                    >
                   </div>
                 </div>
               </div>
@@ -566,7 +567,6 @@
                     </div>
                   </div>
                 </div>
-                .
               </div>
             </div>
           </div>
@@ -749,7 +749,6 @@
                     </div>
                   </div>
                 </div>
-                .
               </div>
             </div>
           </div>
@@ -773,7 +772,9 @@
                   </div>
                   <div class="profile__content">
                     <span class="item">Blog 🏷</span>
-                    <span class="item__value">https://github.com/butterbeetle</span>
+                    <span class="item__value"
+                      >https://github.com/butterbeetle</span
+                    >
                   </div>
                 </div>
               </div>
@@ -930,7 +931,6 @@
                     </div>
                   </div>
                 </div>
-                .
               </div>
             </div>
           </div>
@@ -954,7 +954,9 @@
                   </div>
                   <div class="profile__content">
                     <span class="item">Blog 🏷</span>
-                    <span class="item__value">https://velog.io/@okck123/posts</span>
+                    <span class="item__value"
+                      >https://velog.io/@okck123/posts</span
+                    >
                   </div>
                 </div>
               </div>
@@ -1111,7 +1113,6 @@
                     </div>
                   </div>
                 </div>
-                .
               </div>
             </div>
           </div>
@@ -1389,7 +1390,7 @@
         "#8fbcdb", // 이준혁
         "#bba2fe", // 복예린
         "#e2c881", // 김승회
-        "288292",  // 채종민
+        "288292", // 채종민
       ];
 
       let idx = 1;
